HTML + Style Historia Act + Img

--- a/estilos/partials/_fuentes.scss
+++ b/estilos/partials/_fuentes.scss
@@ -37,9 +37,8 @@ footer {
     font-size: 22px;
 }
 .historiaDiv {
-    border: black 2px solid;
     border-radius: 15px;
-    background-color: #e8e4a9;
+    background-color:lightgoldenrodyellow;
 }
 ol {
     list-style: disc;
