--- a/estilos/partials/_mediaQ.scss
+++ b/estilos/partials/_mediaQ.scss
@@ -33,6 +33,21 @@ nav {
     text-align: center;
     font-size: 12px;
 }
+.padreRedes {
+    align-items: center;
+}
+.footerLogo {
+    align-items: center;
+}
+.contenedor4 {
+    width: 300px;
+    height: 350px;
+
+    &__img {
+        width: 280px;
+        height: 200px;
+    }
+}
 }
 @media only screen and (min-width:320px) and (max-width: 768px) {
     #grillaIndex {
@@ -159,7 +174,13 @@ nav {
     .imageneslocal {
         width: 320px;
         height: 300px;;
-} 
+}
+.padreRedes {
+    align-items: center;
+}
+.footerLogo {
+    align-items: center;
+}
 } 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 #grillaIndex {
