--- a/estilos/styles.scss
+++ b/estilos/styles.scss
@@ -3,157 +3,6 @@
 @import "./partials/fuentes";
 @import "./partials/flex";
 @import "./partials/grid";
+@import "./partials/MetodologiasSASS";
 @import "./partials/mediaQ";
 @import "./partials/animations";
-
-.interior {
-    width: 100%;
-    height: auto;
-    background-color: white;
-    border: 1px black solid;
-    background-color: gold;
-    &__ul {
-        list-style: none;
-        text-align: center;
-    }
-    &__li {
-        font-size: large;
-    }
-}
-.contenedor {
-    width: 18.75rem;
-    height: auto;
-    background-color: #E4EDED;
-    border: 3px solid lightgrey;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    &__img {
-        height: 250px; }
-        border-radius: 15px;
-    &__hijo {
-        width: 250px;
-        height: 50px;
-    }
-    &__boton--activo {
-        width: 150px;
-        height: 50px;
-        background-color: #008CBA;
-        color: #fff;
-        border: #008CBA;
-        margin-top: 10px;
-        font-family: 'Raleway', sans-serif;
-        border-radius: 10px;
-    }
-}
-.contenedor2 {
-   /* width: 43.75rem;*/
-    height:18.75rem; 
-    background-color: #F2F2F2;
-    text-align: center;
-    border: 2px solid grey;
-    border-radius: 20px;
-    &__img {
-        width: 300px;
-        border-radius: 15px;
-    }
-    &__hijo {
-        font-size: medium;
-        font-style: italic;
-    }
-    &__boton {
-        background-color: #4CAF50;
-        border-color: #4CAF50;
-        color: #fff;
-        width: 150px;
-        height: 40px;
-        border-radius: 10px;
-    }
-}
-.contenedor3 {
-    width: 40vw;
-    height: 300px;
-    background-color: #F2F2F2;
-    text-align: center;
-    border: 2px solid grey;
-    border-radius: 20px;
-    &__img {
-        width: 200px;
-        height: 200px;
-    }
-    &__hijo {
-        font-size: large;
-        font-style: italic;
-    }
-}
-
-.contenedor4 {
-    width: 450px;
-    height: 400px;
-    background-color: #F2F2F2;
-    border: 3px solid #dad5d2;
-    border-radius: 9px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    &__img {
-        width: 350px;
-        height: 250px; 
-        border-radius: 10px;
-    }
-    &__hijo {
-        width: 250px;
-        height: 50px;
-    }
-}
-/* Saas clase 12*/
-/*Map*/ /*footer redes*/
-$redes: ( 
-        instagram: #DD2A7B,
-        facebook:  #0d6efd,
-        whatsapp: #25D366
-); 
-@each $red, $color in $redes {
-   .btn--#{$red} {
-       background-color: $color;
-   }
-}
-
-/*Operaciones*/ /*seccion ofertas*/
-
-$color-1:#e8e4a9;
-$color-2: #e3db6f;
-$ancho: 1800px;
-$alto: 250px;
-$centrado: center;
-
-.CajaColor1 {
-         background-color: $color-1;
-          width: ($ancho/3)-100;
-          height: $alto;
-          text-align: $centrado;
-          
-}
-.CajaColor2 {
-            background-color: $color-2;
-             width: $ancho/2;
-             height: $alto;
-             text-align: $centrado;
-}
-/*Condicionales*/
-$producto: limpieza ;
-.tipoProducto {
-      @if $producto == limpieza {
-             background-color: #F2F2F2;
-             color: #000;
-      } @else if $producto == bazar {
-                background-color: $color-2;
-     } @else if $producto == pileta {
-                background-color: lightseagreen;
-     } @else {
-                background-color: lightslategray;
-      }
-}
