HTML btn anchor y flechas carrusel productos  + Style + Img

--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -344,12 +344,12 @@ footer {
 }
 
 .historia {
-  font-size: 22px;
+  font-size: 24px;
 }
 
 .historiaDiv {
   border-radius: 15px;
-  background-color: lightgoldenrodyellow;
+  background-color: #b7e4c7;
 }
 
 ol {
