--- a/estilos/partials/_fuentes.scss
+++ b/estilos/partials/_fuentes.scss
@@ -34,11 +34,11 @@ footer {
     display: inline;
 }
 .historia {
-    font-size: 22px;
+    font-size: 24px;
 }
 .historiaDiv {
     border-radius: 15px;
-    background-color:lightgoldenrodyellow;
+    background-color:#b7e4c7;
 }
 ol {
     list-style: disc;
