--- a/estilos/partials/_tamaños.scss
+++ b/estilos/partials/_tamaños.scss
@@ -181,3 +181,6 @@ footer div.padreRedes em {
 .borde1px {
     border: black 1px solid;
 }
+.sombraContacto {
+    box-shadow: 1px 1px 15px grey;
+}
