--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -65,6 +65,15 @@ section article video {
   border-color: #e85d04;
 }
 
+.accordion-button:not(.collapsed) {
+  color: #000;
+  background-color: #cfe1b9;
+}
+
+.paraForm {
+  background-color: #e9ecef;
+}
+
 nav {
   width: 100%;
   height: -webkit-fit-content;
@@ -301,13 +310,17 @@ footer div.padreRedes em {
   border: black 1px solid;
 }
 
+.sombraContacto {
+  -webkit-box-shadow: 1px 1px 15px grey;
+          box-shadow: 1px 1px 15px grey;
+}
+
 header > h1 {
   font-family: 'Times New Roman', Times, serif;
 }
 
 footer {
   border-top: #bbb 2px solid;
-  margin-top: 50px;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -1205,6 +1218,12 @@ ol {
   }
 }
 
+@media only screen and (min-width: 767px) and (max-width: 789px) {
+  .padreRedes {
+    margin-right: 270px;
+  }
+}
+
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   #grillaIndex {
     -ms-grid-columns: 100%;
@@ -1767,4 +1786,27 @@ section div div div button:hover {
   color: #000;
   width: 170px;
   height: 45px;
+}
+
+/*Contacto*/
+.btnContactoS {
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.btnContactoD {
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.btnContactoS:hover {
+  color: #000;
+  background-color: #F2F2F2;
+  border-color: #F2F2F2;
+}
+
+.btnContactoD:hover {
+  color: #000;
+  background-color: #D94C1A;
+  border-color: #D94C1A;
 }
