--- a/estilos/partials/_mediaQ.scss
+++ b/estilos/partials/_mediaQ.scss
@@ -323,6 +323,15 @@ grid-template-areas:
         align-items: center;
         }
 }
+@media only screen and (min-width: 1022px) and (max-width: 1025px) {
+    .padreRedes {
+        align-items: center;
+        margin-right: 400px;
+    }
+    .footerLogo {
+        align-items: center;
+    }
+    }
 @media only screen and (min-width: 1024px) and (max-width: 1400px) {
  .botonesMain {
      display: flex;
