--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -1436,6 +1436,20 @@ ol {
   }
 }
 
+@media only screen and (min-width: 1022px) and (max-width: 1025px) {
+  .padreRedes {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-right: 400px;
+  }
+  .footerLogo {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 @media only screen and (min-width: 1024px) and (max-width: 1400px) {
   .botonesMain {
     display: -webkit-box;
