Animaciones Nav + href index logo

--- a/estilos/partials/_fuentes.scss
+++ b/estilos/partials/_fuentes.scss
@@ -38,6 +38,7 @@ footer {
 .historiaDiv {
     border-radius: 15px;
     background-color:#b7e4c7;
+    box-shadow: 1px 1px 7px grey;
 }
 ol {
     list-style: disc;
