--- a/estilos/partials/_animations.scss
+++ b/estilos/partials/_animations.scss
@@ -135,3 +135,15 @@ section div div div button:hover {
     background-color:#D94C1A ;
     border-color:#D94C1A ;
 }
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link {
+    text-decoration: none;
+    background-image: linear-gradient(currentColor, currentColor);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 2px;
+    transition: background-size .3s;
+}
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+    color: #000;
+    background-size: 100% 2px;
+}
