--- a/estilos/partials/_tamaños.scss
+++ b/estilos/partials/_tamaños.scss
@@ -13,11 +13,11 @@ footer>iframe {
         height: 350px;
     }
 header img {
-        width: 140px;
-        height: 140px;
+        width: 120px;
+        height: 120px;
         margin: 10px;
-        padding: 5px;
-        border: 1px black solid;
+        padding: 0px;
+        box-shadow: 1px 1px 5px grey;
         border-radius: 20px;
     }
 header div input {
