--- a/estilos/partials/_colores.scss
+++ b/estilos/partials/_colores.scss
@@ -54,9 +54,9 @@ section article video {
     border-color: #e85d04;
 }
 .accordion-button:not(.collapsed) {
-    color: #000;
-    background-color: #cfe1b9;
+    color: #fff;
+    background-color: #325e95;
 }
 .paraForm {
-    background-color: #e9ecef;
+    background-color: #fff;
 }
