--- a/estilos/partials/_tamaños.scss
+++ b/estilos/partials/_tamaños.scss
@@ -179,6 +179,9 @@ footer div.padreRedes em {
 .borde1px {
     border: black 1px solid;
 }
+.borde1pxGris {
+    border: grey 1px solid;
+}
 .sombraContacto {
     box-shadow: 1px 1px 15px grey;
 }
