--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -309,6 +309,10 @@ footer div.padreRedes em {
   border: black 1px solid;
 }
 
+.borde1pxGris {
+  border: grey 1px solid;
+}
+
 .sombraContacto {
   -webkit-box-shadow: 1px 1px 15px grey;
           box-shadow: 1px 1px 15px grey;
@@ -784,6 +788,8 @@ ol {
 }
 
 .interior {
+  /*BEM*/
+  /*OFERTAS*/
   width: 100%;
   height: auto;
   background-color: white;
@@ -1461,6 +1467,158 @@ ol {
   }
 }
 
+@media only screen and (min-width: 1024px) and (max-width: 1100px) {
+  .botonesMain {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .masVendi {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 100%;
+  }
+  nav {
+    width: 100%;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    overflow: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    border: unset;
+  }
+  ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-line-pack: start;
+        align-content: flex-start;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  li {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .padre {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 50% 50%;
+        grid-template-columns: 50% 50%;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+        grid-template-areas: "primero segundo" "tercero cuarto";
+  }
+  .hijo1 {
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+  .hijo2 {
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+  .hijo3 {
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+  .hijo4 {
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+  .principal {
+    background-position: center;
+  }
+  .grillaOfertas2 {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 95%;
+        grid-template-columns: 95%;
+    -ms-grid-rows: fit-content;
+        grid-template-rows: -webkit-fit-content;
+        grid-template-rows: fit-content;
+        grid-template-areas: "pack1" "pack2" "pack3" "ind1" "ind2" "ind3";
+    justify-items: center;
+    -webkit-column-gap: 35rem;
+            column-gap: 35rem;
+  }
+  .grillaOfertas1 {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+    -ms-grid-rows: fit-content;
+        grid-template-rows: -webkit-fit-content;
+        grid-template-rows: fit-content;
+        grid-template-areas: "Tipos";
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .CajaColor1 {
+    display: none !important;
+  }
+  .grillaNosotros {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+    -ms-grid-rows: fit-content;
+        grid-template-rows: -webkit-fit-content;
+        grid-template-rows: fit-content;
+        grid-template-areas: "fotos" "videos";
+  }
+  .imageneslocal {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 40px;
+  }
+}
+
 @media only screen and (min-width: 1022px) and (max-width: 1025px) {
   .padreRedes {
     -webkit-box-align: center;
@@ -1475,7 +1633,7 @@ ol {
   }
 }
 
-@media only screen and (min-width: 1024px) and (max-width: 1400px) {
+@media only screen and (min-width: 1100px) and (max-width: 1400px) {
   .botonesMain {
     display: -webkit-box;
     display: -ms-flexbox;
