Comentarios SCSS + Limpieza Clases Viejas

--- a/estilos/partials/_MetodologiasSASS.scss
+++ b/estilos/partials/_MetodologiasSASS.scss
@@ -1,4 +1,4 @@
-.interior { /*BEM*/ /*OFERTAS*/
+.interior { /*BEM*/ /*PRODUCTOS*/
     width: 100%;
     height: auto;
     background-color: white;
