--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   background-color: #F2F0D5 !important;
   overflow-x: hidden;
@@ -17,6 +18,7 @@ form {
 
 .paraCarrusel {
   color: black;
+  /*Letras Carrusel Index*/
 }
 
 .contacto {
@@ -66,6 +68,7 @@ section article video {
 }
 
 .accordion-button:not(.collapsed) {
+  /*Despligue Acordeón*/
   color: #fff;
   background-color: #325e95;
 }
@@ -234,51 +237,6 @@ footer div a img:hover {
   border-radius: 10px;
 }
 
-.botonOfertas2 {
-  background-color: #3EB595;
-  border-color: #3EB595;
-  color: #fff;
-  width: 150px;
-  height: 40px;
-  border-radius: 10px;
-}
-
-.botonOfertas3 {
-  background-color: #3EB595;
-  border-color: #3EB595;
-  color: #fff;
-  width: 150px;
-  height: 40px;
-  border-radius: 10px;
-}
-
-.botonOfertas4 {
-  background-color: #3EB595;
-  border-color: #3EB595;
-  color: #fff;
-  width: 150px;
-  height: 40px;
-  border-radius: 10px;
-}
-
-.botonOfertas5 {
-  background-color: #3EB595;
-  border-color: #3EB595;
-  color: #fff;
-  width: 150px;
-  height: 40px;
-  border-radius: 10px;
-}
-
-.botonOfertas6 {
-  background-color: #3EB595;
-  border-color: #3EB595;
-  color: #fff;
-  width: 150px;
-  height: 40px;
-  border-radius: 10px;
-}
-
 .imgOfertaAd {
   width: 400px;
   height: 250px;
@@ -363,16 +321,6 @@ footer {
 .productos {
   font-style: italic;
   font-size: 1.125rem;
-}
-
-.negrita {
-  font-weight: bold;
-}
-
-#titulosH1 {
-  letter-spacing: 0.313rem;
-  text-transform: uppercase;
-  display: inline;
 }
 
 .historia {
@@ -789,7 +737,7 @@ ol {
 
 .interior {
   /*BEM*/
-  /*OFERTAS*/
+  /*PRODUCTOS*/
   width: 100%;
   height: auto;
   background-color: white;
@@ -962,6 +910,8 @@ ol {
   color: #000;
 }
 
+/*MediaQ*/
+/*320px a 575*/
 @media only screen and (min-width: 320px) and (max-width: 575px) {
   .OfertasCards {
     height: 300px;
@@ -1040,6 +990,7 @@ ol {
   }
 }
 
+/*Celulares*/
 @media only screen and (min-width: 320px) and (max-width: 768px) {
   #grillaIndex {
     -ms-grid-columns: 100%;
@@ -1245,12 +1196,14 @@ ol {
   }
 }
 
+/*Arreglo footer en 768*/
 @media only screen and (min-width: 767px) and (max-width: 789px) {
   .padreRedes {
     margin-right: 270px;
   }
 }
 
+/*Tablet*/
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   #grillaIndex {
     -ms-grid-columns: 100%;
@@ -1467,6 +1420,7 @@ ol {
   }
 }
 
+/*Notebook 1*/
 @media only screen and (min-width: 1024px) and (max-width: 1100px) {
   .botonesMain {
     display: -webkit-box;
@@ -1619,6 +1573,7 @@ ol {
   }
 }
 
+/*Arreglos footer en 1024*/
 @media only screen and (min-width: 1022px) and (max-width: 1025px) {
   .padreRedes {
     -webkit-box-align: center;
@@ -1633,6 +1588,7 @@ ol {
   }
 }
 
+/*Notebook 2*/
 @media only screen and (min-width: 1100px) and (max-width: 1400px) {
   .botonesMain {
     display: -webkit-box;
@@ -1919,72 +1875,7 @@ section div div div button:hover {
   transition: 1s;
 }
 
-.botonOfertas2 {
-  -webkit-transition: 1s;
-  transition: 1s;
-}
-
-.botonOfertas3 {
-  -webkit-transition: 1s;
-  transition: 1s;
-}
-
-.botonOfertas4 {
-  -webkit-transition: 1s;
-  transition: 1s;
-}
-
-.botonOfertas5 {
-  -webkit-transition: 1s;
-  transition: 1s;
-}
-
-.botonOfertas6 {
-  -webkit-transition: 1s;
-  transition: 1s;
-}
-
 .botonOfertas1:hover {
-  background-color: #8ee6ce;
-  border-color: #8ee6ce;
-  color: #000;
-  width: 170px;
-  height: 45px;
-}
-
-.botonOfertas2:hover {
-  background-color: #8ee6ce;
-  border-color: #8ee6ce;
-  color: #000;
-  width: 170px;
-  height: 45px;
-}
-
-.botonOfertas3:hover {
-  background-color: #8ee6ce;
-  border-color: #8ee6ce;
-  color: #000;
-  width: 170px;
-  height: 45px;
-}
-
-.botonOfertas4:hover {
-  background-color: #8ee6ce;
-  border-color: #8ee6ce;
-  color: #000;
-  width: 170px;
-  height: 45px;
-}
-
-.botonOfertas5:hover {
-  background-color: #8ee6ce;
-  border-color: #8ee6ce;
-  color: #000;
-  width: 170px;
-  height: 45px;
-}
-
-.botonOfertas6:hover {
   background-color: #8ee6ce;
   border-color: #8ee6ce;
   color: #000;
